Fixed Header Issue
Big gap on the header, "line-height: 20px;" was removed.

--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ html {
 .header { 
   size: 20px;
   width: 100%;
-  line-height: 20px;
   border-bottom: 5px solid #12b1c9;
 }
 
